--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,16 +1,45 @@
-# This is a sample build configuration for Java (Gradle).
-# Check our guides at https://confluence.atlassian.com/x/zd-5Mw for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: openjdk:8
+image: lambci/lambda:build-nodejs6.10
 
 pipelines:
+  custom: # Pipelines that can only be triggered manually
+    prod-deploy:
+      - step:
+          name: Test and deploy to production
+          deployment: production
+          caches:
+            - gradle
+          services:
+            - mysql
+          script:
+          - npm install -g serverless
+          - npm install serverless-aws-documentation --save-dev
+          - ./gradlew build
+          - ls -l build/distributions/
+          - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+          - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+          - serverless deploy --stage prod
   default:
     - step:
+        name: Test and deploy to test
+        deployment: test
         caches:
           - gradle
-        script: # Modify the commands below to build your repository.
-          # You must commit the Gradle wrapper to your repository
-          # https://docs.gradle.org/current/userguide/gradle_wrapper.html
-          - bash ./gradlew build
+        services:
+          - mysql
+        script:
+          - npm install -g serverless
+          - npm install serverless-aws-documentation --save-dev
+          - ./gradlew build
+          - ls -l build/distributions/
+          - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+          - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+          - serverless deploy
+definitions:
+  services:
+    mysql:
+      image: mysql:5.6
+      environment:
+        MYSQL_DATABASE: posapps_product_test
+        MYSQL_ROOT_PASSWORD: password
+        MYSQL_USER: posapps_test
+        MYSQL_PASSWORD: password
