--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,7 @@ provider:
   runtime: java8
   memorySize: 3008
   timeout: 60
-  region: eu-west-1
+  region: eu-central-1
 
 package:
     artifact: build/distributions/posapps-product-1.0-SNAPSHOT.zip
