--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -40,6 +40,6 @@ definitions:
       image: mysql:5.6
       environment:
         MYSQL_DATABASE: posapps_product_test
-        MYSQL_ROOT_PASSWORD: password
-        MYSQL_USER: posapps_test
-        MYSQL_PASSWORD: password
+        MYSQL_USER: root
+        MYSQL_ROOT_PASSWORD: mysql
+        MYSQL_PASSWORD: mysql
