--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,5 +1,6 @@
 #image: lambci/lambda:build-nodejs6.10
-image: lambci/lambda:build-nodejs8.10
+#image: lambci/lambda:build-nodejs8.10
+image: lambci/lambda:build-nodejs10.15
 
 pipelines:
   custom: # Pipelines that can only be triggered manually
