--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,7 +2,8 @@
 #image: lambci/lambda:build-nodejs8.10
 #image: lambci/lambda:build-nodejs10.15
 #image: lambci/lambda:build-nodejs12.16
-image: lambci/lambda:build-nodejs14.16
+#image: lambci/lambda:build-nodejs14.16
+image: lambci/lambda:build-nodejs16.9
 
 pipelines:
   custom: # Pipelines that can only be triggered manually
