--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,9 +1,10 @@
 #image: lambci/lambda:build-nodejs6.10
 #image: lambci/lambda:build-nodejs8.10
+image: lambci/lambda:build-nodejs8.10-alpine
 #image: lambci/lambda:build-nodejs10.15
 #image: lambci/lambda:build-nodejs12.16
 #image: lambci/lambda:build-nodejs14.16
-image: lambci/lambda:build-nodejs16.9
+#image: lambci/lambda:build-nodejs16.9
 
 pipelines:
   custom: # Pipelines that can only be triggered manually
