--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,7 @@
 #image: lambci/lambda:build-nodejs6.10
+image: lambci/lambda:
 #image: lambci/lambda:build-nodejs8.10
-image: lambci/lambda:build-nodejs8.10-alpine
+#image: lambci/lambda:build-nodejs8.10-alpine
 #image: lambci/lambda:build-nodejs10.15
 #image: lambci/lambda:build-nodejs12.16
 #image: lambci/lambda:build-nodejs14.16
