--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,10 +17,11 @@ pipelines:
           services:
             - mysql
           script:
-          - sudo npm cache clear
-          - sudo npm install -g serverless --verbose
-          - sudo npm install serverless-aws-documentation --save-dev
-          - sudo ./gradlew build
+          - npm cache clean
+          - npm install -g npm@latest
+          - npm install -g serverless --verbose
+          - npm install serverless-aws-documentation --save-dev
+          - ./gradlew build
           - ls -l build/distributions/
           - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
           - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
