--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,9 +1,8 @@
 #image: lambci/lambda:build-nodejs6.10
-#image: lambci/lambda:build-nodejs8.10
+image: lambci/lambda:build-nodejs8.10
 #image: lambci/lambda:build-nodejs8.10-alpine
 #image: lambci/lambda:build-nodejs10.15
 #image: lambci/lambda:build-nodejs12.16
-image: lambci/lambda:build-nodejs14.16
 #image: lambci/lambda:build-nodejs16.9
 
 pipelines:
@@ -18,7 +17,8 @@ pipelines:
             - mysql
           script:
           - npm cache clean -f
-          - npm install -g npm@latest && npm install -g serverless --verbose
+          - npm install -g npm@8.14.0
+          - npm install -g serverless --verbose
           - npm install serverless-aws-documentation --save-dev
           - ./gradlew build
           - ls -l build/distributions/
