--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,7 @@
 #image: lambci/lambda:build-nodejs6.10
 #image: lambci/lambda:build-nodejs8.10
-#image: lambci/lambda:build-nodejs8.10-alpine
-#image: lambci/lambda:build-nodejs10.15
-#image: lambci/lambda:build-nodejs12.16
-image: lambci/lambda:build-nodejs14.16
-#image: lambci/lambda:build-nodejs16.9
+#image: lambci/lambda:build-nodejs10.x
+image: lambci/lambda:build-nodejs12.x
 
 pipelines:
   custom: # Pipelines that can only be triggered manually
@@ -18,8 +15,11 @@ pipelines:
             - mysql
           script:
           - npm cache clean -f
-          - npm install -g npm@latest && npm install -g serverless --verbose
+          - npm install -g npm@8.14.0
+          - npm install -g serverless --verbose
           - npm install serverless-aws-documentation --save-dev
+          - java -version
+          - which javac
           - ./gradlew build
           - ls -l build/distributions/
           - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
@@ -38,6 +38,8 @@ pipelines:
           - npm install -g npm@8.14.0
           - npm install -g serverless --verbose
           - npm install serverless-aws-documentation --save-dev
+          - java -version
+          - which javac
           - ./gradlew build
           - ls -l build/distributions/
           - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
