--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,6 +18,7 @@ pipelines:
           - npm install -g npm@8.14.0
           - npm install -g serverless --verbose
           - npm install serverless-aws-documentation --save-dev
+          - cat /etc/os-release
           - java -version
           - which javac
           - ./gradlew build
@@ -38,6 +39,7 @@ pipelines:
           - npm install -g npm@8.14.0
           - npm install -g serverless --verbose
           - npm install serverless-aws-documentation --save-dev
+          - cat /etc/os-release
           - java -version
           - which javac
           - ./gradlew build
