--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -43,9 +43,10 @@ pipelines:
           - npm install serverless-aws-documentation --save-dev
           - mkdir ~/jres
           - cd ~/jres
-#          - tar -xf java-1.8.0-openjdk-portable-1.8.0.322.b06-4.portable.jre.el7.x86_64.tar.xz -C ~/jres
-          - tar -xf java-1.8.0-openjdk-portable-1.8.0.322.b06-4.portable.jre.el7.x86_64.tar.xz
-          - ln -s ~/jres/java-1.8.0-openjdk-portable-1.8.0.322.b06-4.portable.jre.el7.x86_64 ~/jres/java-8
+#          - #https://jdk.java.net/archive/
+#          - wget -q https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz
+          - tar -xf openjdk-11.0.2_linux-x64_bin.tar.gz -C ~/jres
+          - ln -s ~/jres/openjdk-11.0.2_linux-x64_bin ~/jres/java-8
           - export JAVA_HOME=~/jres/java-8
           - printenv | grep JAVA_HOME
           - ./gradlew build
