--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -44,8 +44,7 @@ pipelines:
           - mkdir ~/jres
           - cd ~/jres
 #          - #https://jdk.java.net/archive/
-          - curl https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz -s
-          - tar -xvf openjdk-11.0.2_linux-x64_bin.tar.gz -C ~/jres
+          - curl https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz | tar -xzvf openjdk-11.0.2_linux-x64_bin.tar.gz -C ~/jres
           - ln -s ~/jres/openjdk-11.0.2_linux-x64_bin ~/jres/java-8
           - export JAVA_HOME=~/jres/java-8
           - printenv | grep JAVA_HOME
