--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
 	ext {
 		springBootVersion = '1.5.3.RELEASE'
+//		springBootVersion = '2.6.2'
 	}
 	repositories {
 		mavenCentral()
+//		mavenCentral { url "http://repo.maven.apache.org/maven2/"}
         jcenter()
-        maven { url "http://repo.unicenta.org/maven2/" }
+//        jcenter { url = "http://jcenter.bintray.com" }
+        maven { url "https://repo.unicenta.org/maven2/" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -24,7 +27,7 @@ repositories {
 	mavenLocal()
 	mavenCentral()
     maven {
-        url "http://repo.unicenta.org/maven2/"
+        url "https://repo.unicenta.org/maven2/"
     }
 }
 
