--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,22 +1,38 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+http.connection.timeout=15000
+http.read.timeout=60000
+
 spring.datasource.tomcat.initial-size=1
 spring.datasource.tomcat.max-active=4
 spring.datasource.tomcat.min-idle=1
 spring.datasource.tomcat.max-idle=1
 spring.datasource.tomcat.test-on-borrow=true
 
-spring.jpa.show-sql=false
+#spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create-only
+#spring.jpa.hibernate.db-create-script=classpath:db/migration/V1_0__init_db.sql
 
 flyway.enabled=true
+#flyway.enabled=false
+flyway.url=jdbc:mysql://localhost:3306/posapps_product_test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+flyway.user=posapps_test
+flyway.password=password
+flyway.locations=classpath:db/migration
+flyway.schemas=posapps_product_test
+
+spring.datasource.url=jdbc:mysql://localhost:3306/posapps_product_test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=posapps_test
+spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.main.banner-mode=off
 spring.main.web-environment=false
 
 posapps.auth.endpoint=http://localhost:8080/admin/authenticate
 posapps.woocom.adapter.endpoint=http://localhost:8080/woocom/product
-
-http.connection.timeout=15000
-http.read.timeout=60000
