--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,13 +1,15 @@
 hibernate.bytecode.provider=javassist
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.dialect=io.posapps.product.config.ImprovedH2Dialect
 hibernate.current_session_context_class=thread
 
 hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.check_nullability=true
 #hibernate.hbm2ddl.auto=update
-#hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=validate
 #hibernate.hbm2ddl.auto=create
+#hibernate.hbm2ddl.auto=create-drop
 
 #Gets a new db connection when a session times out
 hibernate.connection.autoReconnect=true
